--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -2,3 +2,10 @@ body{
     color: #f8f8f8;
     background-color: #484848;
 }
+
+
+#logo img{
+    width: 150px;
+    border: 5px solid #02bbb2;
+    border-radius: 10px;
+}
